--- a/BmsWpf/Views/ActiveProjectForms/ProjectOverviewView.xaml
+++ b/BmsWpf/Views/ActiveProjectForms/ProjectOverviewView.xaml
@@ -6,7 +6,7 @@
         xmlns:viewModels="clr-namespace:BmsWpf.ViewModels"
         xmlns:intr="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         mc:Ignorable="d"
-        Height="850" Width="751.2">
+        Height="850" Width="750">
     <UserControl.DataContext>
         <viewModels:PFOverviewViewModel/>
     </UserControl.DataContext>
@@ -15,38 +15,38 @@
             <intr:InvokeCommandAction Command="{Binding WindowLoaded}"/>
         </intr:EventTrigger>
     </intr:Interaction.Triggers>
-    <Grid Background="#FF2E3137" Margin="0,0,0.2,-0.4" >
-        <Label Content="Name" HorizontalAlignment="Left" Margin="21,25,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
-        <TextBox Name ="NameTextBox" HorizontalAlignment="Left" Height="30" Margin="126,26,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="525" Text="{Binding Name}"/>
-        <Label Content="Offer" HorizontalAlignment="Left" Margin="21,65,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
-        <ComboBox Name="OfferComboBox" HorizontalAlignment="Left" Height="30" Margin="126,65,0,0"  VerticalAlignment="Top" Width="200" ItemsSource="{Binding OffersList}" SelectedItem="{Binding SelectedOffer}"/>
-        <Label Content="Inquire" HorizontalAlignment="Left" Margin="21,105,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
-        <ComboBox Name="InquireComboBox" HorizontalAlignment="Left" Height="30" Margin="126,105,0,0"  VerticalAlignment="Top" Width="200" ItemsSource="{Binding InquiriesList}" SelectedItem="{Binding SelectedInquiry}"/>
-        <Label Content="Client" HorizontalAlignment="Left" Margin="346,65,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
-        <ComboBox Name="ClientBox" HorizontalAlignment="Left" Height="30" Margin="451,65,0,0" Text="TextBox" VerticalAlignment="Top" Width="200" ItemsSource="{Binding ClientsList}" SelectedItem="{Binding SelectedClient}"/>
-        <Label Content="Contact to" HorizontalAlignment="Left" Margin="346,105,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
-        <TextBox Name="ContactTextBox" HorizontalAlignment="Left" Height="30" Margin="451,106,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="200" Text="{Binding ContactTo}"/>
-        <Label Content="Telephone" HorizontalAlignment="Left" Margin="346,140,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
-        <TextBox Name="PhoneBox" HorizontalAlignment="Left" Height="30" Margin="451,140,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="200" Text="{Binding Telephone}"/>
-        <Label Content="Creator" HorizontalAlignment="Left" Margin="21,140,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
-        <Label Name="IncomeLabel" Content="Incomes" HorizontalAlignment="Left" Margin="349,222,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
-        <TextBox Name="IncomeBox" HorizontalAlignment="Left" Height="30" Margin="451,223,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="200" IsEnabled="False" Text="{Binding Incomes}"/>
-        <Label Name="ExpensesLabel" Content="Expences" HorizontalAlignment="Left" Margin="349,257,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
-        <TextBox Name="ExpensesBox" HorizontalAlignment="Left" Height="30" Margin="451,259,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="200" IsEnabled="False" Text="{Binding Expenses}"/>
-        <Label Name="ProfitLabel" Content="Profit" HorizontalAlignment="Left" Margin="349,292,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
-        <TextBox Name="ProfitBox" HorizontalAlignment="Left" Height="30" Margin="451,292,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="200" IsEnabled="False" Text="{Binding Profit}"/>
-        <Label Content="Start Date" HorizontalAlignment="Left" Margin="21,222,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
-        <Label Content="Deadline" HorizontalAlignment="Left" Margin="21,257,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
-        <Label Content="End Date" HorizontalAlignment="Left" Margin="21,292,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue" />
-        <DatePicker Name="StartDatePicker" HorizontalAlignment="Left" Margin="126,229,0,0" VerticalAlignment="Top" Height="30" Width="200" SelectedDate="{Binding Path=StartDate, StringFormat=dd/MM/yyyy}" />
-        <DatePicker Name="EndDatePicker" HorizontalAlignment="Left" Margin="126,292,0,0" VerticalAlignment="Top" Height="30" Width="200" SelectedDate="{Binding Path=EndDate, StringFormat=dd/MM/yyyy}" />
-        <DatePicker Name="LimitDatePicker" HorizontalAlignment="Left" Margin="126,262,0,0" VerticalAlignment="Top" Height="30" Width="200" SelectedDate="{Binding Path=Deadline, StringFormat=dd/MM/yyyy}" />
-        <Label Name="NotesLabel" Content="Notes and Events"  Margin="127,351,99,0" HorizontalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="24" FontWeight="Bold" Background="#FF2E3137" Foreground="White" Width="525"/>
-        <DataGrid Name="NotesGrid" HorizontalAlignment="Left" Height="223" Margin="126,398,0,0" VerticalAlignment="Top" Width="525" CanUserAddRows="False" ItemsSource="{Binding NotesAndEvents}"/>
+    <Grid Background="#FF2E3137" Height="850" Width="750" >
+        <Label Content="Name" HorizontalAlignment="Left" Margin="49,57,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
+        <TextBox Name ="NameTextBox" HorizontalAlignment="Left" Height="30" Margin="154,58,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="525" Text="{Binding Name}"/>
+        <Label Content="Offer" HorizontalAlignment="Left" Margin="49,97,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
+        <ComboBox Name="OfferComboBox" HorizontalAlignment="Left" Height="30" Margin="154,97,0,0"  VerticalAlignment="Top" Width="200" ItemsSource="{Binding OffersList}" SelectedItem="{Binding SelectedOffer}"/>
+        <Label Content="Inquire" HorizontalAlignment="Left" Margin="49,137,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
+        <ComboBox Name="InquireComboBox" HorizontalAlignment="Left" Height="30" Margin="154,137,0,0"  VerticalAlignment="Top" Width="200" ItemsSource="{Binding InquiriesList}" SelectedItem="{Binding SelectedInquiry}"/>
+        <Label Content="Client" HorizontalAlignment="Left" Margin="374,97,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
+        <ComboBox Name="ClientBox" HorizontalAlignment="Left" Height="30" Margin="479,97,0,0" Text="TextBox" VerticalAlignment="Top" Width="200" ItemsSource="{Binding ClientsList}" SelectedItem="{Binding SelectedClient}"/>
+        <Label Content="Contact to" HorizontalAlignment="Left" Margin="374,137,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
+        <TextBox Name="ContactTextBox" HorizontalAlignment="Left" Height="30" Margin="479,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="200" Text="{Binding ContactTo}"/>
+        <Label Content="Telephone" HorizontalAlignment="Left" Margin="374,172,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
+        <TextBox Name="PhoneBox" HorizontalAlignment="Left" Height="30" Margin="479,172,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="200" Text="{Binding Telephone}"/>
+        <Label Content="Creator" HorizontalAlignment="Left" Margin="49,172,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
+        <Label Name="IncomeLabel" Content="Incomes" HorizontalAlignment="Left" Margin="377,254,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
+        <TextBox Name="IncomeBox" HorizontalAlignment="Left" Height="30" Margin="479,255,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="200" IsEnabled="False" Text="{Binding Incomes}"/>
+        <Label Name="ExpensesLabel" Content="Expences" HorizontalAlignment="Left" Margin="377,289,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
+        <TextBox Name="ExpensesBox" HorizontalAlignment="Left" Height="30" Margin="479,291,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="200" IsEnabled="False" Text="{Binding Expenses}"/>
+        <Label Name="ProfitLabel" Content="Profit" HorizontalAlignment="Left" Margin="377,324,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
+        <TextBox Name="ProfitBox" HorizontalAlignment="Left" Height="30" Margin="479,324,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="200" IsEnabled="False" Text="{Binding Profit}"/>
+        <Label Content="Start Date" HorizontalAlignment="Left" Margin="49,254,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
+        <Label Content="Deadline" HorizontalAlignment="Left" Margin="49,289,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue"/>
+        <Label Content="End Date" HorizontalAlignment="Left" Margin="49,324,0,0" VerticalAlignment="Top" Width="100" Height="30" FontSize="16" Foreground="AliceBlue" />
+        <DatePicker Name="StartDatePicker" HorizontalAlignment="Left" Margin="154,261,0,0" VerticalAlignment="Top" Height="30" Width="200" SelectedDate="{Binding Path=StartDate, StringFormat=dd/MM/yyyy}" />
+        <DatePicker Name="EndDatePicker" HorizontalAlignment="Left" Margin="154,324,0,0" VerticalAlignment="Top" Height="30" Width="200" SelectedDate="{Binding Path=EndDate, StringFormat=dd/MM/yyyy}" />
+        <DatePicker Name="LimitDatePicker" HorizontalAlignment="Left" Margin="154,294,0,0" VerticalAlignment="Top" Height="30" Width="200" SelectedDate="{Binding Path=Deadline, StringFormat=dd/MM/yyyy}" />
+        <Label Name="NotesLabel" Content="Notes and Events"  Margin="155,383,70,0" HorizontalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="24" FontWeight="Bold" Background="#FF2E3137" Foreground="White" Width="525"/>
+        <DataGrid Name="NotesGrid" HorizontalAlignment="Left" Height="223" Margin="154,430,0,0" VerticalAlignment="Top" Width="525" CanUserAddRows="False" ItemsSource="{Binding NotesAndEvents}"/>
         <TextBox Name="creatorBox" 
                               Height="30" 
                               Width="200"
-                              Margin="126,140,425,0"  
+                              Margin="154,172,396,0"  
                               BorderThickness="2"  
                               BorderBrush="#313c4f" 
                               TextWrapping="Wrap"  
@@ -55,14 +55,14 @@
                               HorizontalContentAlignment="Center"
                               VerticalContentAlignment="Center"
                  Text="{Binding Creator}"/>
-        <Button Name="ButtonSave" Content="Save" HorizontalAlignment="Left" Margin="551,643,0,0" VerticalAlignment="Top" Width="100" Height="30" Command="{Binding Save}"/>
+        <Button Name="ButtonSave" Content="Save" HorizontalAlignment="Left" Margin="579,675,0,0" VerticalAlignment="Top" Width="100" Height="30" Command="{Binding Save}"/>
         <Button Name="ButtonBack" Content="Back" HorizontalAlignment="Left"  VerticalAlignment="Top" 
                             Width="100" 
                             Height="30"
                             Background="AliceBlue" 
                             Foreground="Black" 
                             FontSize="14" 
-                            Margin="589,705,0,0"  
+                            Margin="577,749,0,0"  
                             Command="{Binding Back}"/>
     </Grid>
 </UserControl>
