--- a/BmsWpf/Views/Admin/ManageUser.xaml
+++ b/BmsWpf/Views/Admin/ManageUser.xaml
@@ -38,7 +38,8 @@
             ItemsSource="{Binding ClearenceTypes}"
             SelectedItem="{Binding SelectedClearenceType, Mode=TwoWay}">
         </ComboBox>
-        <Button Content="Save" HorizontalAlignment="Left" Margin="198,293,0,0" VerticalAlignment="Top" Width="75" Height="30" Background="#FF4074CB" Foreground="White" FontSize="14" Command="{Binding Save}"/>
-        <Button Content="Back" HorizontalAlignment="Left" Margin="288,293,0,0" VerticalAlignment="Top" Width="75" Height="30" Background="#FFCB4040" Foreground="White" FontSize="14" Command="{Binding Back}"/>
+        <Button Content="Save" HorizontalAlignment="Left" Margin="203,243,0,0" VerticalAlignment="Top" Width="75" Height="30" Background="#FF4074CB" Foreground="White" FontSize="14" Command="{Binding Save}"/>
+        <Button Content="Delete" HorizontalAlignment="Left" Margin="288,243,0,0" VerticalAlignment="Top" Width="75" Height="30" Background="#FFCB4040" Foreground="White" FontSize="14" Command="{Binding Delete}"/>
+        <Button Content="Back" HorizontalAlignment="Left" Margin="288,327,0,0" VerticalAlignment="Top" Width="75" Height="30" Background="#FFCB4040" Foreground="White" FontSize="14" Command="{Binding Back}"/>
     </Grid>
 </Window>
